force-app/main/default/objects/Release_Management__c/Release_Management__c.object-meta.xml
<CustomObject>
    <label>Release Management</label>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Release Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>