force-app/main/default/objects/Release_Management__c/fields/Midwest_Machinery_PO__c.field-meta.xml
<CustomField>
    <fullName>Midwest_Machinery_PO__c</fullName>
    <label>Midwest Machinery PO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>