force-app/main/default/objects/Release_Management__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <length>4</length>
    <type>Text</type>
</CustomField>