force-app/main/default/objects/Release_Management__c/fields/Sage__c.field-meta.xml
<CustomField>
    <fullName>Sage__c</fullName>
    <label>Sage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>